--- a/provisioning/roles/k8s-worker/tasks/main.yml
+++ b/provisioning/roles/k8s-worker/tasks/main.yml
@@ -8,7 +8,7 @@
   ansible.builtin.shell:
     cmd: "kubeadm token create --print-join-command --ttl 10m --description '{{ inventory_hostname }} registration token'"
   register: kubeadm_join_result
-  delegate_to: master
+  delegate_to: "k8s-m01"
   when: kubelet_conf.stat.exists is false
 
 - name: Send command to register worker node
